[metadata]
name = ogo
author = Bryce A. Besler, Andrew S. Michalski, Steven K. Boyd
author-email = babesler@ucalgary.ca, andrew.michalski@ucalgary.ca, skboyd@ucalgary.ca
summary = Technologies for opportunistic screening of osteoporosis
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://github.com/Bonelab/Ogo
project_urls =
    Source Code = https://github.com/Bonelab/Ogo
license = Apache-2
classifier =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    Programming Language :: Python
keywords =
    medical
    imaging

[entry_points]
console_scripts =
    ogoCli = ogo.cli.cli:main
    ogoIntCal = ogo.cli.InternalCalibration:main
    ogoFePistoiaTabulate = ogo.cli.FePistoiaTabulate:main
    ogoL4CompressionFe = ogo.cli.L4Compression_fe:main
    ogoMindwaysModel3AsyncCalib = ogo.cli.MindwaysModel3AsynchronousCalibration:main
    ogoMindwaysModel3PhantomCalib = ogo.cli.MindwaysModel3PhantomCalibration:main
    ogoPistoia = ogo.cli.Pistoia:main
    ogoSidewaysFe = ogo.cli.SidewaysFallFe:main
    ogoBMassPhantom = ogo.cli.BMas200PhantomCalibration:main
    ogoBmdTabulate = ogo.cli.BmdTabulate:main
    ogoBMDAnalysis = ogo.cli.BMDAnalysis:main
    ogoIsotropicResampling = ogo.cli.IsotropicResampling:main
    ogoReplaceLabels = ogo.cli.ReplaceLabels:main
    ogoCreateDatasetJSON = ogo.cli.CreateDatasetJSON:main
    ogoImageExam = ogo.cli.ImageExam:main
    ogoImageCalibration = ogo.cli.ImageCalibration:main
    ogoPrintLabels = ogo.cli.PrintLabels:main

[pbr]
skip_changelog = 1
skip_authors = 1

