[metadata]
name = ogo
author = Bryce A. Besler, Andrew S. Michalski, Steven K. Boyd
author-email = babesler@ucalgary.ca, andrew.michalski@ucalgary.ca, skboyd@ucalgary.ca
summary = Technologies for opportunistic screening of osteoporosis
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://github.com/Bonelab/Ogo
project_urls =
    Source Code = https://github.com/Bonelab/Ogo
license = Apache-2
classifier =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    Programming Language :: Python
keywords =
    medical
    imaging

[entry_points]
console_scripts =
    ogoAnalyzeBMD = ogo.cli.AnalyzeBMD:main
    ogoCreateDatasetJSON = ogo.cli.CreateDatasetJSON:main
    ogoImageCalibration = ogo.cli.ImageCalibration:main
    ogoImageExam = ogo.cli.ImageExam:main
    ogoIsotropicResampling = ogo.cli.IsotropicResampling:main
    ogoPrintLabels = ogo.cli.PrintLabels:main
    ogoReplaceLabels = ogo.cli.ReplaceLabels:main
    ogoProcrustes = ogo.cli.Procrustes:main
    ogoGenerateFEM = ogo.cli.GenerateFEM:main
    ogoRepairNIfTI = ogo.cli.RepairNifti:main
    ogoVisualize = ogo.cli.Visualize:main
    ogoValidate = ogo.cli.Validate:main
    ogoMergeLabels = ogo.cli.MergeLabels:main
    ogoImageCrop = ogo.cli.ImageCrop:main
    ogoGraphCuts = ogo.cli.GraphCuts:main
    ogoMorphologicalOperation = ogo.cli.MorphologicalOperation:main
    ogoIntensityProjection = ogo.cli.IntensityProjection:main
    ogoDicomSelector = ogo.cli.DicomSelector:main
    ogoImageThreshold = ogo.cli.ImageThreshold:main
    ogoImageIntensityWindowingFilter = ogo.cli.ImageIntensityWindowingFilter:main
    ogoValidateSummary = ogo.cli.ValidateSummary:main
    ogoValidateSelectBest = ogo.cli.ValidateSelectBest:main

[pbr]
skip_changelog = 1
skip_authors = 1

